--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -87,4 +87,8 @@ All colors MUST be HSL.
   .card-hover {
     @apply transition-all duration-300 hover:scale-[1.02] hover:shadow-xl;
   }
+  .strava-badge- { display: inline-block; height: 32px; }
+  .strava-badge- img { visibility: hidden; height: 32px; }
+  .strava-badge-:hover { background-position: 0 -47px; }
+  .strava-badge-follow { height: 32px; width: 32px; background: url(//badges.strava.com/echelon-sprite-32.png) no-repeat 0 0; }
 }
